--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,7 +91,8 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url('../img/portrait.jpg');
+            background: url('../img/rishabh_kanwar.jpg');
+            background-size: contain;
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
